--- a/main.html
+++ b/main.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Car Insurance Registration Form</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h2>Car Insurance Registration Form</h2>
 
+  <form method="post">
+    <!-- Name -->
+    <label for="name">Name:</label>
+    <input type="text" id="name" required>
+    <br><br>
+
+    <!-- Email -->
+    <label for="email">Email:</label>
+    <input type="email" id="email" required>
+    <br><br>
+
+    <!-- Gender -->
+    <label>Gender:</label>
+    <input type="radio" id="male" name="gender" value="Male" required>
+    <label for="male">Male</label>
+
+    <input type="radio" id="female" name="gender" value="Female" required>
+    <label for="female">Female</label>
+
+    <input type="radio" id="other" name="gender" value="Other" required>
+    <label for="other">Other</label>
+    <br><br>
+
+    <!-- Car Brands -->
+    <label for="cars">Car Brand:</label>
+    <select id="cars">
+      <option value="">--Select--</option>
+      <option value="BMW">BMW</option>
+      <option value="Audi">Audi</option>
+      <option value="Mercedez">Mercedez</option>
+    </select>
+    <br><br>
+
+    <!-- Car Age -->
+    <label for="carage">Car Age (in years):</label>
+    <input type="number" id="carage" required>
+    <br><br>
+
+    <!-- Date of Purchase -->
+    <label for="dop">Date of Purchase:</label>
+    <input type="date" id="dop" required>
+    <br><br>
+
+    <!-- Password -->
+    <label for="password">Password:</label>
+    <input type="password" id="password" required>
+    <br><br>
+
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+  </form>
 </body>
 
 </html>
